--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "kynm/laby-multi-cloud",
+    "name": "minhtu/laby-multi-cloud",
     "description": "the first composer package",
     "type": "php",
     "license": "MIT",
